# keep

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  REFERENCE.md  SKILL.md  TECH_DEBT_AUDIT.md  hatch_build.py  haystack_q7_s1.txt  initialize.md  pyproject.toml
.assocmem/: assocmem.toml  embedding_cache.db
.claude-plugin/: marketplace.json  plugin.json
.github/workflows/: secret-scan.yml  security.yml  test.yml
assocmem/: __init__.py  __main__.py  api.py  cli.py  config.py  logging_config.py  paths.py  store.py
assocmem/providers/: __init__.py  base.py  documents.py  embedding_cache.py  embeddings.py  llm.py
bench/: analyze_reconstruct_run.py  context_perf.py  embedding_basis_experiments.py  put_perf.py  reconstruct_spike.py
bench/locomo/: README.md  ingest.py  judge_binary.py  llm.py  prep_dataset.py  query.py
claude-code-plugin/: .mcp.json
claude-code-plugin/.claude-plugin/: plugin.json
claude-code-plugin/hooks/: hooks.json
commands/: reflect.md
docs/: AGENT-GUIDE.md  ANALYSIS.md  API-SCHEMA.md  ARCHITECTURE.md  CLAWDBOT-INTEGRATION.md  CONTINUATIONS.md  EDGE-TAGS.md  FLOW-ACTIONS.md  FLOW-INVOCATION.md  FLOWS.md  FLOW_STATE_DOCS.md  HERMES-INTEGRATION.md  INDEX.md  KEEP-ANALYZE.md  KEEP-CONFIG.md  KEEP-DAEMON.md  KEEP-DATA.md  KEEP-EDIT.md  KEEP-FIND.md  KEEP-FLOW.md  KEEP-GET.md  KEEP-LIST.md  KEEP-MCP.md  KEEP-MOVE.md  KEEP-NOW.md  KEEP-PENDING.md  KEEP-PROMPT.md  KEEP-PUT.md  KEEP-SAVE.md  LANGCHAIN-INTEGRATION.md  META-TAGS.md  OPENCLAW-INTEGRATION.md  OUTPUT.md  PROMPTS.md  PYTHON-API.md  QUICKSTART.md  REFERENCE.md  RELEASING.md  SYSTEM-TAGS.md  TAGGING.md  (+1 more)
docs/design/: BUILTIN-STATE-DOCS.md  FLOW-CONVERGENCE.md  STATE-ACTIONS.md  STATE-DOC-INTERACTION.md  STATE-DOC-SCHEMA.md  email-threading.md
hermes-plugin/: README.md  __init__.py  cli.py  plugin.yaml
hooks/: hooks.json
keep/: __init__.py  __main__.py  _background_processing.py  _context_resolution.py  _daemon_client.py  _provider_lifecycle.py  _search_augmentation.py  analyzers.py  api.py  backend.py  body_policy.py  builtin_state_docs.py  cli.py  cli_app.py  config.py  console_support.py  const.py  context_cache.py  continuation.py  continuation_engine.py  continuation_env.py  continuation_executor.py  continuation_policy.py  continuation_store.py  daemon.py  daemon_client.py  daemon_server.py  dependencies.py  document_store.py  errors.py  flow_client.py  flow_env.py  git_ingest.py  ignore.py  integrations.py  logging_config.py  markdown_export.py  markdown_frontmatter.py  markdown_import.py  markdown_mirrors.py  (+33 more)
langchain-keep/: README.md  pyproject.toml
langchain-keep/src/langchain_keep/: __init__.py
later/: api_full.py  design-context-component-cache.md  design-daemon-query-server.md  design-meta-as-flows.md  design-supernode-review.md  design-unified-get-query-cache.md  git-changelog-ingest.md  ignore-list.md  keep-review.md  plan-ocr.md  prompt-over-bindings.md  state-doc-compositioin.md  state-doc-schema.md  test_relationships.py  test_tagging.py  todo.txt
memory/: project_daemon_cli_refactor.md
openclaw-plugin/: index.ts  openclaw.plugin.json
patterns/: conversations.md  domains.md
scripts/: bump_version.py  check_host_mcp.py  check_licenses.sh  install-hermes-plugin.sh  investigate_prompts.py  release.sh
tests/: __init__.py  conftest.py  test_analyze_overview.py  test_analyzer_unit.py  test_assess_virustotal.py  test_cli.py  test_concurrency.py  test_config.py  test_config_command.py  test_content_hash_skip.py  test_context_cache.py  test_continuation_engine.py  test_continuation_store.py  test_continue_api_first.py  test_core.py  test_daemon_client.py  test_daemon_server.py  test_daemon_startup.py  test_data_export.py  test_deep_edges.py  test_deferred_embedding.py  test_delegation.py  test_dependencies.py  test_document_store.py  test_edges.py  test_email_extraction.py  test_embedding_cache.py  test_embedding_identity.py  test_env_action_context.py  test_error_visibility.py  test_extract_links.py  test_extraction.py  test_extraction_e2e.py  test_failure_modes.py  test_file_document_provider.py  test_find_context_projection_plan.py  test_find_deep.py  test_find_scope.py  test_find_tags.py  test_flow_host_contract.py  (+69 more)
(+201 files in other folders)
