[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "assocmem"
version = "0.1.0"
description = "Associative memory with semantic search"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "chromadb>=0.4",
    "typer>=0.9",
    "tomli-w>=1.0",
]

[project.optional-dependencies]
openai = ["openai>=1.0"]
sentence-transformers = ["sentence-transformers>=2.2"]
mlx = [
    "mlx>=0.10",
    "mlx-lm>=0.10",
]
local = [
    # Apple Silicon: MLX for embedding/summarization
    "mlx>=0.10; platform_system == 'Darwin' and platform_machine == 'arm64'",
    "mlx-lm>=0.10; platform_system == 'Darwin' and platform_machine == 'arm64'",
    # Fallback: sentence-transformers for embedding
    "sentence-transformers>=2.2",
]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]

[project.scripts]
assocmem = "assocmem.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["assocmem"]
