[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "keep"
version = "0.1.0"
description = "Semantic memory - remember and search documents by meaning"
readme = "README.md"
requires-python = ">=3.11,<3.14"
dependencies = [
    "chromadb>=0.4",
    "typer>=0.9",
    "tomli-w>=1.0",
]

[project.optional-dependencies]
openai = ["openai>=1.0"]
anthropic = ["anthropic>=0.18.0"]
sentence-transformers = ["sentence-transformers>=2.2"]
documents = [
    # Document text extraction (PDF, HTML)
    "pypdf>=5.0",
    "beautifulsoup4>=4.9",
]
mlx = [
    "mlx>=0.10",
    "mlx-lm>=0.10",
]
local = [
    # Apple Silicon: MLX for embedding/summarization
    "mlx>=0.10; platform_system == 'Darwin' and platform_machine == 'arm64'",
    "mlx-lm>=0.10; platform_system == 'Darwin' and platform_machine == 'arm64'",
    # Fallback: sentence-transformers for embedding
    "sentence-transformers>=2.2",
    # Document extraction
    "pypdf>=5.0",
    "beautifulsoup4>=4.9",
]
clawdbot = [
    # For Clawdbot integration: use configured models
    "anthropic>=0.18.0",
]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]

[project.scripts]
keep = "keep.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["keep"]
artifacts = [
    "SKILL.md",
    "patterns/**/*.md",
]

[tool.hatch.build.targets.sdist]
include = [
    "/keep",
    "/SKILL.md",
    "/patterns",
    "/README.md",
    "/LICENSE",
]
