[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "langchain-keep"
version = "0.1.0"
description = "LangChain integration for keep — reflective memory for AI agents"
requires-python = ">=3.10"
license = "MIT"
dependencies = ["keep-skill[langchain]>=0.43.4"]

[project.urls]
Homepage = "https://keepnotes.ai"
Repository = "https://github.com/nicobailon/keep"
Documentation = "https://docs.keepnotes.ai"
